# GRUMPCO

./: .dockerignore  .env.example  .gitignore  AGENT_TODOS.json  API_SETUP_INSTRUCTIONS.txt  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRO_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile.backend  G-Rump.ps1  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETE.md  KIMI_IMPLEMENTATION.md  KIMI_QUICK_REFERENCE.md  KIMI_SHIP_PLAN.md  Makefile  OPTIMIZATIONS.md  OPTIMIZATION_RESULTS.md  Overview.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  PROJECT_STATUS.md  QUALITY_CHECKLIST.md  QUALITY_IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SECURITY.md  SEO_OPTIMIZATION_REPORT.md  SETUP.md  SUBMISSION.md  TECHNICAL_QUALITY_REPORT.md  TESTING.md  TEST_COVERAGE_PLAN.md  TEST_REPORT.md  (+37 more)
.Jules/: palette.md
.claude/: settings.local.json
.config/: .commitlintrc.json  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.js  .semgrep.yml  .semgrepignore  codecov.yml  eslint.config.js
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
.orchids/: orchids.json
.zap/: rules.tsv
agentlightning/: __init__.py  client.py  requirements.txt  server.py
api/: index.ts
backend/: .dockerignore  .env.example  .env.minimal  .env.oauth-integrations  .gitignore  .swcrc  .vercelignore  DEPLOY_FLYIO.md  DEPLOY_VERCEL.md  Dockerfile  Dockerfile.alpine-optimized  README.md  eslint.config.js  fly.toml  lint_output.txt  package-lock.json  package.json  railway.json  stryker.config.json  supabase-schema.sql  test.db  tsconfig.json  vercel.json  vitest.config.ts
benchmark-results/: build-benchmark-2026-02-09T00-29-42-375Z.json  build-benchmark-2026-02-09T00-31-04-842Z.json  build-benchmark-2026-02-09T00-32-08-773Z.json  build-benchmark-2026-02-09T00-32-42-581Z.json
data/: grump.db
demo/: demo.sh
deploy/: README.md  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.rocm.yml  docker-compose.scale.yml  docker-compose.yml  haproxy.cfg  render.yaml
docs/: ADR.md  AGENTLIGHTNING.md  AGENT_SYSTEM.md  AI_WORKFLOWS.md  API.md  BACKENDS.md  (+71 more)
docs-site/: BACKENDS.md  CURSOR_GRUMP_API.md  HOW_IT_WORKS.md  INTENT_COMPILER.md  OVERVIEW.md  PRODUCTION_CHECKLIST.md  QUICK_START.md  RAILWAY_DEPLOY.md  SYSTEM_ARCHITECTURE.md  SYSTEM_EVALUATION.md  config.mts  downloads.md  index.md  package-lock.json  package.json
intent-compiler/: Cargo.toml  build-simd.bat  build-simd.sh  build-wasm.bat  build-wasm.sh
intent-compiler/benches/: parser_bench.rs
intent-compiler/src/: accuracy_learning_engine.rs  auth_system.rs  cache.rs  classifier.rs  context_engine.rs  db_client.rs  db_schema.sql  dependencies.rs  enrichment.rs  error_handling.rs  extraction.rs  founder_data_engine.rs  gpu_accelerator.rs  hyper_cache.rs  hyper_parse.rs  hyper_simd.rs  jit_engine.rs  keywords.rs  lexicon.rs  lib.rs  main.rs  market_analysis.rs  market_competitors.rs  market_data_feeds.rs  market_engine.rs  market_revenue.rs  market_risks.rs  market_segments.rs  ml_training_engine.rs  ml_training_pipeline.rs  moat_engine.rs  model_compression.rs  negation.rs  network_intelligence_engine.rs  neural_pattern_engine.rs  nlp_engine.rs  outcome_automation.rs  parallel_engine.rs  planner.rs  prelude.rs  (+15 more)
intent-compiler/tests/: integration_tests.rs
(+1850 files in other folders)
