[package]
name = "grump-intent"
version = "0.1.0"
edition = "2021"
description = "G-Rump Intent Compiler: parse natural language intent into structured JSON"

[[bin]]
name = "grump-intent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
