[package]
name = "grump-intent"
version = "0.1.0"
edition = "2021"
description = "G-Rump Intent Compiler: parse natural language intent into structured JSON"

[[bin]]
name = "grump-intent"
path = "src/main.rs"

[lib]
name = "grump_intent"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "parser_bench"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
once_cell = "1.19"
rustc-hash = "1.1"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

# Optimized Release Profile
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Additional optimization flags
overflow-checks = false
incremental = false

# Enable CPU-specific optimizations
# For AVX2: RUSTFLAGS="-C target-cpu=haswell"
# For AVX-512: RUSTFLAGS="-C target-cpu=skylake-avx512"
# For native: RUSTFLAGS="-C target-cpu=native"

# Benchmark profile inherits release optimizations
[profile.bench]
inherits = "release"
debug = false
