[package]
name = "grump-intent"
version = "0.1.0"
edition = "2021"
description = "G-Rump Intent Compiler: parse natural language intent into structured JSON"

[lib]
name = "grump_intent"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bench]]
name = "parser_bench"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
once_cell = "1.19"
rustc-hash = "1.1"
phf = { version = "0.11", features = ["macros"] }
# Memory optimization crates
bumpalo = { version = "3.14", features = ["collections"] }
smallvec = { version = "1.11", features = ["union", "const_generics"] }
# LRU cache for intent parsing
lru = "0.12"
# WASM support
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

# Optimized Release Profile
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Additional optimization flags
overflow-checks = false
incremental = false

# Enable CPU-specific optimizations
# For AVX2: RUSTFLAGS="-C target-cpu=haswell"
# For AVX-512: RUSTFLAGS="-C target-cpu=skylake-avx512"
# For native: RUSTFLAGS="-C target-cpu=native"

# Benchmark profile inherits release optimizations
[profile.bench]
inherits = "release"
debug = false
